修改了查看留言的路径，把message_list 合并到index首页。

--- a/MessageBorder/WebRoot/css/style.css
+++ b/MessageBorder/WebRoot/css/style.css
@@ -11,7 +11,7 @@ body{
     width: 553px;
     height: 553px;
     margin: 0 auto;
-    background: #ffffff;
+    background: #dce2fe;
     position: relative;
     top:220px;
     border-radius:20px;
