--- a/MessageBorder/WebRoot/css/style.css
+++ b/MessageBorder/WebRoot/css/style.css
@@ -11,7 +11,7 @@ body{
     width: 553px;
     height: 553px;
     margin: 0 auto;
-    background: #dce2fe;
+    background: #FFFFFF;
     position: relative;
     top:220px;
     border-radius:20px;
@@ -73,4 +73,66 @@ padding-left: 48px;
     font-size: 24px;
 
 }
+
+
+
+/*脚步*/
+	.ym1{
+	width:100%;
+	height:60px;
+	min-width:1200px;
+	background-color:#2A2C2E;
+	float:left;
+	position:fixed;
+	bottom:0px;
+	left:0px;
+	
+	}
+	
+/*标题栏内容居中*/
+.barContentBox{
+	width:1200px;
+	height:60px;
+	margin:0 auto;}
+	.logo{
+	margin:6px;
+	width:48px;
+	height:48px;
+	float:left;}
+/*logo文本样式*/
+.logotext{
+	height: 30px;
+	float: left;
+	color: #F1F1F1;
+	font-size:12px;
+	line-height: 15px;
+	text-align: center;
+	margin:15px 2px;
+}
+#info{
+	height: 30px;
+	float: left;
+	color: #60686B;
+	font-size:12px;
+	line-height: 15px;
+	text-align: center;
+	margin:15px 250px;
+}
+   /* 头部*/
+   .bar1{
+	width:100%;
+	height:60px;
+	min-width:1200px;
+	background-color:#2A2C2E;
+	float:left;
+	position:fixed;
+	top:0px;
+	left:0px;
+	
+	}
+/*标题栏内容居中*/
+.barContentBox{
+	width:1200px;
+	height:60px;
+	margin:0 auto;}
 
