--- a/MessageBorder/WebRoot/css/ym1.css
+++ b/MessageBorder/WebRoot/css/ym1.css
@@ -1,20 +1,26 @@
-body{
-	background-image:url(../images/2.jpg);
-	background-color:white;
-}
-.title{
-  float:right;
-  margin-left:10px;
-  padding-left:15px;
-  padding-top:38px;
-  
-    }
-    .bar{
-	
-	
+
+   /* 头部*/
+   .bar2{
+	width:100%;
+	height:60px;
+	min-width:1200px;
+	background-color:#2A2C2E;
+	float:left;
+	position:fixed;
+	top:0px;
+	left:0px;
 	
 	}
-	.ym1{
+/*标题栏内容居中*/
+.barContentBox{
+	width:1200px;
+	height:60px;
+	margin:0 auto;}
+
+
+
+
+.ym1{
 	width:100%;
 	height:60px;
 	min-width:1200px;
@@ -55,17 +61,21 @@ body{
 	text-align: center;
 	margin:15px 250px;
 }
-.jumbotron{
+   /* 头部*/
+   .bar1{
+	width:100%;
+	height:60px;
+	min-width:1200px;
+	background-color:#2A2C2E;
+	float:left;
+	position:fixed;
+	top:0px;
+	left:0px;
 	
-	background-color:#FDFDFD;
-	
-	
-	
-}
+	}
+/*标题栏内容居中*/
+.barContentBox{
+	width:1200px;
+	height:60px;
+	margin:0 auto;}
 
-
-
-
-
-
-    
